--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+	<script src="./app.js"></script>
     </head>
     <body>
         <h1>Hello World!!!!!!</h1>
