--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
 	<script src="./app.js"></script>
+        <link rel="stylesheet" href="app.css">
     </head>
     <body>
         <h1>Hello World!!!!!!</h1>
