--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="app.css">
     </head>
     <body>
-        <h1>Hello World!!!!!!</h1>
+        <h1>Hello World</h1>
+        <p>Some other special text ...</p>
     </body>
 </html>
