Some small changes in index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sequi quasi quisquam excepturi nostrum pariatur soluta harum facere nisi eos.</p>
 	<h3>Hello World</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sequi quasi quisquam excepturi nostrum pariatur soluta harum facere nisi eos.</p>
+        <div>
+            <span>asdfasdf</span>
+        </div>
     </body>
 </html>
