Added some paragraphs and removed heading h2

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <div>
             <span>asdfasdf</span>
         </div>
-        <h2>some heading</h2>
 	<p>some text</p>
+<p>some text</p>
+<p>some text</p>
+<p>some text</p>
+<p>some text</p>
+<p>some text</p>
     </body>
 </html>
