--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div>
             <span>asdfasdf</span>
         </div>
-        <h2>some heading asdflaksjdflaksdjf aslkdfjasldkf</h2>
+        <h2>Some another heading ...</h2>
 	<p>some text</p>
 <p>some text</p>
 <p>some text</p>
