Changed text in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h3>Hello World</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sequi quasi quisquam excepturi nostrum pariatur soluta harum facere nisi eos.</p>
         <div>
-            <span>asdfasdf</span>
+            <span>asddf</span>
         </div>
         <h2>Some another heading ...</h2>
 	<p>some text</p>
