Added paragraph bellow h2

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <span>asddf</span>
         </div>
         <h2>Some another heading ...</h2>
+	<p>some text</p>
 	<h3>Some another heading ...</h3>
 	<p>some text</p>
 <p>some text</p>
